--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">LockChain</string>
+    <string name="app_name">LockTrip</string>
     <color name="lockchain_orange">#DA7B61</color>
 </resources>
